jellyfin_stack/radarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: jellyfin
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 7878
  selector:
    app: radarr
