jellyfin_stack/radarr/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: jellyfin
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`radarr.home.sparhomelab.dev`)
    kind: Rule
    services:
    - name: radarr
      port: 80
    middlewares:
    - name: default-headers-jellyfin
  tls:
    secretName: radarr-tls
